<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:id="@+id/my_awesome_toolbar" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <EditText
            android:id="@+id/usernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/usernameHint"/>

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:password="true"
            android:hint="@string/passwordHint"/>

        <Button
            android:id="@+id/loginBT"
            style="@style/ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginBT"/>

    </LinearLayout>
</LinearLayout>