<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        layout="@layout/toolbar"
        android:id="@+id/my_awesome_toolbar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/my_awesome_toolbar">

        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="107dp"
            android:textSize="18sp"
            android:id="@+id/textView" />
        <Button
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ship1"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="66dp"
            android:id="@+id/buttonCharter" />



        <Button
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ship2"
            android:id="@+id/buttonDiporto"
            android:layout_alignTop="@+id/buttonCharter"
            android:layout_alignEnd="@+id/textView" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/callOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_white"
            fab:fab_size="mini"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</RelativeLayout>
